--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main-content">
         <header class="header-banner">
             <h1 class="main-title">Amigo Secreto</h1>
-            <img src="assets/amigo-secreto.png" alt="Imagem representativa de amigo secreto">
+            <img class = 'amigoOculto' src="assets/Amigo Oculto.png" alt="Imagem representativa de amigo secreto">
         </header>
         
         
